docs: 完善 worktree 开发流程（最后一次 rebase + 后续 merge）

--- a/.develop.md
+++ b/.develop.md
@@ -7,6 +7,8 @@
 ## 0. Git 开发模式（Worktree，强制）
 
 - 本仓库永远不在 `main` 分支上直接开发：`main` 只做同步（`pull --ff-only`）与合并（merge）。
+- 冲突处理：**冲突必须在 feature worktree 内解决**；如果在 `main` 上执行 merge 出现冲突，立刻 `git merge --abort`，回 feature 分支同步 `main` 后重试。
+- 同步 `main` 的策略（强制）：每个 worktree 只允许在“准备合并”阶段执行一次 `git rebase origin/main`（最后一次 rebase）；后续若还需要跟进 `main` 的更新，只能在 feature 分支上用 `git merge origin/main`。
 - feature 开发：一个 feature = 一个 worktree 目录 + 一个分支；目录放在父目录，命名统一使用 `../flowersec-feat-<topic>`，分支命名统一使用 `feat-<topic>`。
 
 模板：
@@ -21,7 +23,32 @@ WT=../flowersec-feat-<topic>
 git worktree add -b "$BR" "$WT" origin/main
 ```
 
-开发完成后合并回 `main` 并清理 worktree/分支：
+在新 worktree 目录里开发并跑完门禁（以 `make check`/CI 为准）。准备合并前（**仅允许一次 rebase**），先把 `main` 的最新变更同步到 feature 分支并前置解决冲突：
+
+```bash
+# 在 "$WT"（feature worktree）执行
+git fetch origin
+git rebase origin/main
+
+# 如有冲突：解决后执行
+# git add <files>
+# git rebase --continue
+#
+# rebase 完成后重新跑门禁（make check），确保全绿
+```
+
+如果完成“最后一次 rebase”后，`main` 又有新提交需要继续同步：**只能 merge，禁止再次 rebase**：
+
+```bash
+# 在 "$WT"（feature worktree）执行
+git fetch origin
+git merge origin/main
+
+# 如有冲突：解决后提交这个 merge commit
+# 然后再次跑门禁（make check）
+```
+
+确认 feature 分支已包含当前 `origin/main` 且门禁全绿后，回到 `main` 工作区合并并清理 worktree/分支：
 
 ```bash
 git switch main
@@ -59,4 +86,3 @@ git branch -d "$BR"
 
 - Go SDK（`flowersec-go`）发布使用 tag：`flowersec-go/v<version>`（例如 `flowersec-go/v0.9.0`）。
 - 当下游仓库需要新能力时，优先 upstream-first：先在本仓库完成实现与门禁 → 合并到 `main` → 打 tag 并 push → 确认发布成功 → 再到下游升级依赖。
-
